chore: change version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rawon",
-	"version": "3.0.0",
+	"version": "3.1.0-dev",
 	"description": "A simple powerful Discord music bot built to fulfill your production desires. Easy to use, with no coding required.",
 	"main": "index.js",
 	"type": "module",
