--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "Rawon",
+    "name": "BetsMusicBOT",
     "description": "A simple powerful Discord music bot built to fulfill your production desires. Easy to use, with no coding required.",
-    "logo": "https://api.clytage.org/assets/images/rawon.png",
+    "logo": "https://www.wallpaperflare.com/static/729/230/425/mixing-consoles-dj-black-red-wallpaper.jpg",
     "env": {
         "DISCORD_TOKEN": {
             "description": "What is your Discord bot's token? | Example: NTE5NjQ2MjIxNTU2Nzc2OTcw.XAcEQQ.0gjhNbGeWBsKP6FVuIyZWlG2cMd",
